# zeta

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  README.md  README_OLD.md  RELEASE_NOTES.md  TODO.md
sirc/: CMakeLists.txt  hello.sir  main.c  sir.l  sir.y
src/sem/: CMakeLists.txt  README.md  TODO.md  guest_mem.c  guest_mem.h  handles.c  handles.h  sem.c  sem_host.c  sem_host.h  sem_hosted.c  sem_hosted.h  semrt.c  semrt.h  semrt_file_fs.c  semrt_file_fs.h  sir_jsonl.c  sir_jsonl.h  spec.md  zcl1.c  zcl1.h  zi_tape.c  zi_tape.h
src/sem/docs/: caps.md
src/sem/tests/: run_sirc_then_sem_run.cmake  run_sirc_then_sem_verify.cmake  test_caps_list.c  test_diff_sem_vs_sircc_atomic_basic_i32.c  test_diff_sem_vs_sircc_suite.c  test_hint_ptrsym_extern_decl_fn.c  test_run_atomic_basic_i64.c  test_run_atomic_cmpxchg_i32.c  test_run_atomic_cmpxchg_i64.c  test_run_bad_cfg_br_args_mismatch.c  test_run_bad_cfg_switch_case_lit_not_const.c  test_run_call_direct_internal.c  test_run_call_indirect.c  test_run_cfg_switch.c  test_run_closure_make_call.c  test_run_fun_cmp_eq_true.c  test_run_fun_cmp_ne_true.c  test_run_fun_sym_call.c  test_run_mem_stack.c  test_run_sem_and_sc_thunk_trap_not_taken.c  test_run_sem_cond_thunk_trap_not_taken.c  test_run_sem_defer_increments_global_before_ret.c  test_run_sem_if_thunk_trap_not_taken.c  test_run_sem_if_val_to_select.c  test_run_sem_match_sum_let_option_i32.c  test_run_sem_match_sum_option_i32.c  test_run_sem_or_sc_thunk_trap_not_taken.c  test_run_sem_ptr_add_sub_cmp.c  test_run_sem_ptr_cmp_ne.c  test_run_sem_ptr_kind_param.c  test_run_sem_scope_defer_runs_on_fallthrough.c  test_run_sem_switch_thunk_trap_not_taken.c  test_run_sem_void_type_ignored.c  test_run_sem_while_global_counter.c  test_run_simd_cmp_select_bool_mask.c  test_run_simd_extract_oob_traps.c  test_run_simd_i32_add_extract_replace.c  test_run_simd_load_vec_misaligned_traps.c  test_run_simd_replace_oob_traps.c  test_run_simd_shuffle_oob_traps.c  (+18 more)
src/sem/tests/fixtures/: bad_atomic_missing_mode.sir.jsonl  call_direct_internal.sir.jsonl  fun_cmp_eq_true.sir.jsonl  fun_cmp_ne_true.sir.jsonl  sem_cond_thunk_trap_not_taken.sir.jsonl  simd_load_vec_misaligned_traps.sir.jsonl
src/sirc/: CMakeLists.txt  README.md  TODO.md  sir.l  sir.y  sirc.c  sirc_emit.h
src/sirc/docs/: sirc.md
src/sirc/examples/: abs_i32.sir  add.sir  adt_make_get.sir  alloca_array.sir  cfg_if.sir  cfg_join_phi.sir  cfg_switch.sir  closure_make_call.sir  features.sir  float_trunc.sir  fun_sym_call.sir  hello.sir  include_basic.sir  include_multi_nested.sir  mem_copy_fill.sir  mem_stack.sir  mod_scope.sir  ptr_arith.sir  ptr_layout.sir  sem_and_or_sc.sir  sem_cond_thunk_else_taken.sir  sem_cond_thunk_trap_not_taken.sir  sem_cond_val_val.sir  sem_defer_void.sir  sem_if_thunk_trap_not_taken.sir  sem_if_val_val.sir  sem_match_sum_payload_thunk.sir  sem_scope_cfg.sir  sem_switch_thunk.sir  sem_while_break.sir  sendloop_mono.sir  sendloop_uniform.sir  simd_atomic_mix.sir  simd_basic.sir  simd_gather_scatter_masked.sir
src/sirc/examples/include/: defs.sir  defs.sir.inc  nested_a.sir  nested_b.sir
src/sirc/examples/pkg_demo/: package.toml
src/sirc/starter/hello_zeta/: README.md
src/sirc/tests/: run_sirc_diag_expect.cmake  run_sirc_golden.cmake  run_sirc_then_sircc_verify.cmake
src/sirc/tests/fixtures/: bad_include_not_found.sir  bad_legacy_flags_scalar.sir  (+10 more)
src/sircc/: CMakeLists.txt  README.md  TODO.md  check.c  check.h  compiler.c  compiler.h  compiler_diag.c  compiler_emit.c  compiler_ids.c  compiler_ids.h  compiler_internal.h  compiler_link.c  compiler_lower_cfg.c  compiler_lower_expr_a.c  compiler_lower_expr_b.c  compiler_lower_hl.c  compiler_lower_hl.h  compiler_lower_internal.h  compiler_lower_simd.c  compiler_parse.c  compiler_validate.c  compiler_zasm.c  compiler_zasm_addr.c  compiler_zasm_addr_emit.c  compiler_zasm_backend.c  compiler_zasm_collect.c  compiler_zasm_diag.c  compiler_zasm_emit.c  compiler_zasm_internal.h  compiler_zasm_lower_stmt.c  compiler_zasm_lower_value.c  json.c  json.h  main.c  sircc.c  sircc.h  support.c  support.h
src/sircc/docs/: compiler_kit_cheatsheet.md  data_v1.md  hl_core_contract.md  mir_producer.md  src.md  test.md
src/sircc/examples/: add.sir.jsonl  adt_layout_i64_payload.sir.jsonl  adt_make_variant_oob_traps.sir.jsonl  adt_wrong_variant_traps.sir.jsonl  atomic_basic_i64.sir.jsonl  bad_adt_get_nullary.sir.jsonl  bad_call_indirect_argc.sir.jsonl  bad_cfg_br_args_mismatch.sir.jsonl  bad_cfg_switch_case_lit_not_const.sir.jsonl  bad_data_v1_string_wrong_fields.sir.jsonl  bad_ptr_add_fun.sir.jsonl  bad_ptr_offset_void.sir.jsonl  bad_ptr_to_i64_closure.sir.jsonl  bad_simd_missing_feature.sir.jsonl  bad_simd_shuffle_idx_len.sir.jsonl  bad_simd_vec_lane_unsupported.sir.jsonl  bad_simd_vec_lanes_zero.sir.jsonl  bad_store_ptr_fun.sir.jsonl  call_indirect_ptrsym.sir.jsonl  call_mnemonic_tags.sir.jsonl  cfg_bad_early_term.sir.jsonl  cfg_if_condbr.sir.jsonl  conv_mnemonic_tags.sir.jsonl  data_v1_needs_prelude.sir.jsonl  data_v1_ok.sir.jsonl  data_v1_types_only.sir.jsonl  divrem_mnemonic_tags.sir.jsonl  eqz_mnemonic_tags.sir.jsonl  float_cmp.sir.jsonl  float_load_canon.sir.jsonl  hello_zabi25_file_cat.sir.jsonl  load_store_no_align.sir.jsonl  mem_copy_overlap_trap.sir.jsonl  mem_stack.sir.jsonl  mem_stack_widths.sir.jsonl  ptr_cmp.sir.jsonl  rot_mnemonic_tags.sir.jsonl  sem_and_sc_thunk_trap_not_taken.sir.jsonl  sem_or_sc_thunk_trap_not_taken.sir.jsonl  sem_ptr_add_sub_cmp.sir.jsonl  (+33 more)
src/sircc/tests/: diff_compile_run_hl_vs_core.cmake  emit_and_check.cmake  emit_zasm_and_ircheck.cmake  emit_zasm_and_run_zem.cmake  expect_output_file_contains.cmake  expect_stderr_contains.cmake  expect_stdout_contains.cmake  lower_hl_emit_core_and_verify.cmake  run_and_expect_exit.cmake  run_and_write_stdout.cmake
src/sircc/tools/: mnemonic_coverage.py
src/sircore/: CMakeLists.txt  README.md  api.md  handles.h  hosted_zabi.c  hosted_zabi.h  sem_host.c  sem_host.h  sir_module.c  sir_module.h  sircore_vm.c  sircore_vm.h  zi_ctl.md
src/sircore/tests/: test_module_hello.c  test_vm_hello.c
(+457 files in other folders)
